Add CSS and update Chat functionality

--- a/chat.html
+++ b/chat.html
@@ -3,47 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wit.ai NLP App</title>
+    <title>AI Chat App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Simple AI App Using Wit.ai</h1>
-    <input type="text" id="userInput" placeholder="Type something...">
-    <button onclick="sendToWitAI()">Send to AI</button>
+    <h1>Chat with AI</h1>
+    <input type="text" id="userInput" placeholder="Say 'hi'">
+    <button onclick="sendToWitAI()">Send</button>
     <p id="response"></p>
+    <div id="loader" style="display:none;" class="loader"></div>
 
     <script>
         const responses = {
-    greet: "Hello! How can I assist you today?",
-    help: "I'm here to help! What do you need assistance with?",
-    goodbye: "Goodbye! Have a great day!",
-    // Add more intent-response pairs as needed
-};
+            greet: "Hello! How can I assist you today?",
+            help: "I'm here to help! What do you need assistance with?",
+            goodbye: "Goodbye! Have a great day!",
+        };
 
-async function sendToWitAI() {
-    const userInput = document.getElementById('userInput').value;
-    const responseElement = document.getElementById('response');
+        async function sendToWitAI() {
+            const userInput = document.getElementById('userInput').value;
+            const responseElement = document.getElementById('response');
+            const loader = document.getElementById('loader');
 
-    try {
-        const response = await fetch('https://api.wit.ai/message?v=20231008&q=' + encodeURIComponent(userInput), {
-            headers: {
-                'Authorization': 'Bearer NY5DDZZU7S6JPMRC72NOQWLTBY6GTFU2'
+            responseElement.textContent = 'AI is typing...'; // Show typing message
+            loader.style.display = 'block'; // Show loader
+            responseElement.classList.add('processing');  // Add processing class
+
+            try {
+                const response = await fetch('https://api.wit.ai/message?v=20231008&q=' + encodeURIComponent(userInput), {
+                    headers: {
+                        'Authorization': 'Bearer NY5DDZZU7S6JPMRC72NOQWLTBY6GTFU2'
+                    }
+                });
+
+                const data = await response.json();
+                const intent = data.intents && data.intents[0] ? data.intents[0].name : null;
+
+                // Hide loader after response is received
+                loader.style.display = 'none'; 
+                responseElement.classList.remove('processing'); // Remove class
+
+                if (intent && responses[intent]) {
+                    responseElement.textContent = `AI: ${responses[intent]}`;
+                } else {
+                    responseElement.textContent = 'AI: I did not understand. Can you please repeat?';
+                }
+            } catch (error) {
+                loader.style.display = 'none'; // Hide loader in case of error
+                responseElement.classList.remove('processing'); // Remove class
+                responseElement.textContent = `Error: ${error.message}`;
             }
-        });
-
-        const data = await response.json();
-        const intent = data.intents && data.intents[0] ? data.intents[0].name : null;
-
-        // Use the mapping to get the appropriate response
-        if (intent && responses[intent]) {
-            responseElement.textContent = `AI: ${responses[intent]}`;
-        } else {
-            responseElement.textContent = 'AI: I did not understand. Can you please repeat?';
         }
-    } catch (error) {
-        responseElement.textContent = `Error: ${error.message}`;
-    }
-}
-
     </script>
 </body>
 </html>
