--- a/chat.html
+++ b/chat.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Chat with AI</h1>
-    <input type="text" id="userInput" placeholder="Say 'hi'">
-    <button onclick="sendToWitAI()">Send</button>
-    <p id="response"></p>
+    <input type="text" id="userInput" placeholder="Say 'hi'" class="input-box">
+    <button onclick="sendToWitAI()" class="send-button">Send</button>
+    <p id="response" class="response-text"></p>
     <div id="loader" style="display:none;" class="loader"></div>
 
     <script>
