--- a/chat.html
+++ b/chat.html
@@ -14,46 +14,71 @@
     <div id="loader" style="display:none;" class="loader"></div>
 
     <script>
-        const responses = {
-            greet: "Hello! How can I assist you today?",
-            help: "I'm here to help! What do you need assistance with?",
-            goodbye: "Goodbye! Have a great day!",
-        };
+function sendToWitAI() {
+    const userInput = document.getElementById("userInput").value; // Get the user input
+    const responseElement = document.getElementById("response");
+    const loader = document.getElementById("loader");
 
-        async function sendToWitAI() {
-            const userInput = document.getElementById('userInput').value;
-            const responseElement = document.getElementById('response');
-            const loader = document.getElementById('loader');
+    // Show loader while processing
+    loader.style.display = "block";
+    responseElement.textContent = ""; // Clear previous response
 
-            responseElement.textContent = 'AI is typing...'; // Show typing message
-            loader.style.display = 'block'; // Show loader
-            responseElement.classList.add('processing');  // Add processing class
+    // Send the input to Wit.ai
+    fetch(`https://api.wit.ai/event?v=20241008&session_id=prodc3u&context_map={}`, {
+        method: 'POST',
+        headers: {
+            'Authorization': `Bearer NY5DDZZU7S6JPMRC72NOQWLTBY6GTFU2`, // Your token
+            'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({
+            type: "message",
+            message: userInput // Pass the user's input message
+        })
+    })
+    .then(response => response.json())
+    .then(data => {
+        loader.style.display = "none"; // Hide loader
+        console.log(data); // Log the response for debugging
 
-            try {
-                const response = await fetch('https://api.wit.ai/message?v=20231008&q=' + encodeURIComponent(userInput), {
-                    headers: {
-                        'Authorization': 'Bearer NY5DDZZU7S6JPMRC72NOQWLTBY6GTFU2'
-                    }
-                });
+        // Check if the response contains the expected structure
+        if (data && data.response) {
+            // Display the text response from the Composer
+            const responseText = data.response.text || "I didn't understand that. Can you please clarify?";
+            responseElement.textContent = responseText;
 
-                const data = await response.json();
-                const intent = data.intents && data.intents[0] ? data.intents[0].name : null;
-
-                // Hide loader after response is received
-                loader.style.display = 'none'; 
-                responseElement.classList.remove('processing'); // Remove class
-
-                if (intent && responses[intent]) {
-                    responseElement.textContent = `AI: ${responses[intent]}`;
-                } else {
-                    responseElement.textContent = 'AI: I did not understand. Can you please repeat?';
-                }
-            } catch (error) {
-                loader.style.display = 'none'; // Hide loader in case of error
-                responseElement.classList.remove('processing'); // Remove class
-                responseElement.textContent = `Error: ${error.message}`;
+            // Optionally, if you want to handle voice response, you can do something like this:
+            const voiceResponse = data.response.speech.q; // Get voice response if needed
+            if (voiceResponse) {
+                // Call the function to speak the response
+                speak(voiceResponse);
             }
+        } else {
+            responseElement.textContent = "I didn't understand that. Can you please clarify?";
         }
+    })
+    .catch(error => {
+        loader.style.display = "none"; // Hide loader
+        responseElement.textContent = "Error occurred. Please try again.";
+        console.error('Error:', error);
+    });
+}
+
+// Function to handle speech synthesis
+function speak(text) {
+    // Check if speech synthesis is supported
+    if ('speechSynthesis' in window) {
+        const utterance = new SpeechSynthesisUtterance(text);
+        
+        // Set the voice (optional)
+        utterance.voice = window.speechSynthesis.getVoices().find(voice => voice.name === 'Google UK English Male') || null;
+        
+        // Speak the text
+        window.speechSynthesis.speak(utterance);
+    } else {
+        console.log("Speech synthesis not supported in this browser.");
+    }
+}
+
     </script>
 </body>
 </html>
